Exercise1_08/manifests/server102-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server102-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server102
  template:
    metadata:
      labels:
        app: server102
    spec:
      containers:
        - name: server102
          image: vuolahti/server102:third
